--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -107,6 +107,9 @@
 .no-scrollbar::-webkit-scrollbar {
   display: none;
   /* Chrome, Safari and Opera */
+  width: 0;
+  height: 0;
+  background: transparent;
 }
 
 .glass-panel {
